
New: Enable support for compilation with AddressSanitizer. Use "configure --with-asan" to enable.

Fixed: Issue #843: Linux: Wrong memory usage reported in LXC container when ZFS filesystem is used. Monit
now uses MemAvailable on Linux when calculating the memory usage, so it will provide more accurate statistics.
Thanks to Joe LeVeque for patch.

Fixed: Issue #880: If monit is linked with AddresSanitizer, it may crash when it generates an MD5 hash.
Thanks to Lutz Mader for patch.

Fixed: Issue #879: The HTML interface didn't escape strings that are part of monit configuration file.
Thanks to Hanno Boeck for report.

Fixed: Issue #872: Procmatch PID column show five digits only

Fixed: Issue #851: Linux and AIX: The length of the string that describes the process name and its arguments
was limited to 4kB, so the "procmatch" may not find the process if the pattern is past this limit. The limit
was removed on Linux. On AIX the limit was rised to 8kB.

Fixed: MacOS: Only first 16 characters of the process name was displayed for privileged processes,
so the pattern based process check and the procmatch CLI may miss some processes.

Fixed: If monit is linked with AddresSanitizer and a custom configuration file is passed via the -c option,
monit  may crash.

Fixed: Fix memory leak if a pemfile option is used with a path that cannot be read.

Fixed: Fix memory leak if custom "set mail-format" is set.

Fixed: Fix memory leak when no explicit "check system" service entry is present in monit configuration and
monit is reloaded.

Fixed: Fix memory leak if "restart program" is defined for a service and monit is reloaded.


Version 5.26.0

New: Allow any characters including space in a service name if the name is
     enclosed in quotes. Example:
     check process "apache 😍" with pidfile /var/run/httpd.pid

New: The load average test now allows to set the per-CPU-core limit, so it 
     allows for generic load average limit policy regardless of CPU count. Example: